[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sotore_2.png" type="Texture" id=1]
[ext_resource path="res://Script/store_pets.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sotore2" type="Sprite" parent="."]
position = Vector2( 641, 360 )
scale = Vector2( 1.00312, 1.00556 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button_home" type="Button" parent="."]
show_behind_parent = true
margin_left = 892.0
margin_top = 56.0
margin_right = 929.0
margin_bottom = 94.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_books" type="Button" parent="."]
show_behind_parent = true
margin_left = 943.0
margin_top = 55.0
margin_right = 980.0
margin_bottom = 95.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_cars" type="Button" parent="."]
show_behind_parent = true
margin_left = 993.0
margin_top = 55.0
margin_right = 1034.0
margin_bottom = 95.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_t-shirt" type="Button" parent="."]
show_behind_parent = true
margin_left = 1047.0
margin_top = 55.0
margin_right = 1088.0
margin_bottom = 95.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_pets" type="Button" parent="."]
show_behind_parent = true
margin_left = 1098.0
margin_top = 55.0
margin_right = 1140.0
margin_bottom = 96.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_residence" type="Button" parent="."]
show_behind_parent = true
margin_left = 1149.0
margin_top = 56.0
margin_right = 1191.0
margin_bottom = 96.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_exit" type="Button" parent="."]
show_behind_parent = true
margin_left = 1223.0
margin_top = 56.0
margin_right = 1261.0
margin_bottom = 95.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_dog" type="Button" parent="."]
show_behind_parent = true
margin_left = 27.0
margin_top = 266.0
margin_right = 325.0
margin_bottom = 599.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_cat" type="Button" parent="."]
show_behind_parent = true
margin_left = 342.0
margin_top = 263.0
margin_right = 637.0
margin_bottom = 593.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_pet_3" type="Button" parent="."]
show_behind_parent = true
margin_left = 652.0
margin_top = 265.0
margin_right = 948.0
margin_bottom = 598.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_pet_4" type="Button" parent="."]
show_behind_parent = true
margin_left = 963.0
margin_top = 266.0
margin_right = 1254.0
margin_bottom = 599.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 1022.0
margin_top = 476.0
margin_right = 1200.0
margin_bottom = 534.0
rect_pivot_offset = Vector2( -211, 347 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 714.0
margin_top = 476.0
margin_right = 887.0
margin_bottom = 539.0
rect_pivot_offset = Vector2( -211, 347 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 401.0
margin_top = 476.0
margin_right = 585.0
margin_bottom = 537.0
rect_pivot_offset = Vector2( -211, 347 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel1" type="RichTextLabel" parent="."]
margin_left = 94.0
margin_top = 478.0
margin_right = 264.0
margin_bottom = 534.0
rect_pivot_offset = Vector2( -211, 347 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button_home" to="." method="_on_Button_home_pressed"]
[connection signal="pressed" from="Button_books" to="." method="_on_Button_books_pressed"]
[connection signal="pressed" from="Button_cars" to="." method="_on_Button_cars_pressed"]
[connection signal="pressed" from="Button_t-shirt" to="." method="_on_Button_tshirt_pressed"]
[connection signal="pressed" from="Button_pets" to="." method="_on_Button_pets_pressed"]
[connection signal="pressed" from="Button_residence" to="." method="_on_Button_residence_pressed"]
[connection signal="pressed" from="Button_exit" to="." method="_on_Button_exit_pressed"]
[connection signal="pressed" from="Button_dog" to="." method="_on_Button_dog_pressed"]
[connection signal="pressed" from="Button_cat" to="." method="_on_Button_cat_pressed"]
[connection signal="pressed" from="Button_pet_3" to="." method="_on_Button_pet_3_pressed"]
[connection signal="pressed" from="Button_pet_4" to="." method="_on_Button_pet_4_pressed"]
